update method register
